# AI-chan

AI-Chan/: CMakeLists.txt  main.cpp
AI-Chan/headers/: AI.hpp  CalcFunc.hpp  IOFunc.hpp  TextPlayer.hpp  Vision.hpp
